# ibn-battuta

./: .gitignore  Cargo.toml  NearestNeighbor-Instance-Benchmark.csv  README.md  devenv.nix
benches/: benchmarks.rs
data/: example.top
src/: lib.rs  main.rs
src/algorithms/: mod.rs  utils.rs
src/algorithms/ant_colony/: acs.rs  ant_colony_system.rs  mod.rs  sparse_matrix.rs
src/algorithms/exact/: bellman_held_karp.rs  branch_and_bound.rs  brute_force.rs  mod.rs
src/algorithms/heuristic/: greedy.rs  mod.rs  nearest_neighbor.rs
src/algorithms/heuristic/local_search/: lin_kernighan.rs  mod.rs  three_opt.rs  two_opt.rs
src/algorithms/metaheuristic/: ga_two_opt.rs  genetic_algorithm.rs  mod.rs  sa_two_opt.rs  simulated_annealing.rs
src/algorithms/metaheuristic/ant_colony/: acs_two_opt.rs  ant_colony_optimization.rs  ant_colony_system.rs  ant_system.rs  mod.rs  rbacs_two_opt.rs  red_black_ant_colony_system.rs
src/algorithms/nearest_neighbor/: kd_tree.rs  mod.rs  nearest_neighbor.rs  tests.rs
src/parser/: metric.rs  mod.rs  tests.rs  tsp.rs  tsp_error.rs
src/utils/: mod.rs  point.rs  sparse_matrix.rs
tests/: nearest_neighbor_tests.rs
