[package]
name = "ibn_battuta"
version = "0.1.0"
edition = "2021"
include = ["/src", "/benches", "/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
approx = "0.5.1"
rand = "0.8.5"
log = "0.4.20"
rayon = "1.10.0"
clap = { version = "4.0", features = ["derive"] }
[dev-dependencies]
criterion = "0.5.1"
approx = "0.5.0"


[[bench]]
name = "benchmarks"
harness = false
