[package]
name = "ibn_battuta"
version = "0.1.1"
edition = "2021"
include = ["/src", "/benches", "/data"]
license = "MIT OR Apache-2.0"
description = "A Rust Library for Solving the Travelling Salesman Problem (TSP)"
keywords = ["tsp", "genetic_algorithms", "simulated_annealing", "ACS", "RB-ACS"]
categories = ["algorithms"]
homepage = "https://github.com//BIRSAx2/ibn-battuta"
repository = "https://github.com//BIRSAx2/ibn-battuta"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
approx = "0.5.1"
rand = "0.8.5"
log = "0.4.20"
rayon = "1.10.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.0"
